Update from EC2

--- a/from_ec2/ali/create_submission_inceptionv3.ipynb
+++ b/from_ec2/ali/create_submission_inceptionv3.ipynb
@@ -143,31 +143,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10254 11554 11967 10460 12605 12888 13219 11215 10533 11037 10466 11056 10475 13490 12009 11633 11585 10978 12654 10148 13416 11990 "
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-7888f5db69aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_test_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform_save_imgs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize_n\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/ubuntu/persist/cervix/cervix/processing.pyc\u001b[0m in \u001b[0;36mtransform_save_imgs\u001b[0;34m(df, transform_func, **args)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtransform_save_imgs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform_func\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'processed_path'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtransform_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ubuntu/persist/cervix/venv/local/lib/python2.7/site-packages/pandas/core/series.pyc\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, arg, na_action)\u001b[0m\n\u001b[1;32m   2156\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2157\u001b[0m             \u001b[0;31m# arg is a function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2158\u001b[0;31m             \u001b[0mnew_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap_f\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2159\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2160\u001b[0m         return self._constructor(new_values,\n",
-      "\u001b[0;32mpandas/_libs/src/inference.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer (pandas/_libs/lib.c:66440)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m/home/ubuntu/persist/cervix/cervix/processing.pyc\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtransform_save_imgs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform_func\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'processed_path'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtransform_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/ubuntu/persist/cervix/cervix/processing.pyc\u001b[0m in \u001b[0;36mresize_n\u001b[0;34m(path, n)\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresize_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mresize_path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m     \u001b[0mrescaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mINTER_LINEAR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msave_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrescaled\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresize_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test = c.data.make_test_df()\n",
     "test = c.processing.transform_save_imgs(test, c.processing.resize_n, n=224)"
@@ -187,55 +163,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "def df_to_keras_generator(df, batch_size, grayscale=None):\n",
-    "    assert isinstance(grayscale, (bool)), 'grayscale must be set to a bool'\n",
-    "    imread_opt = 0 if grayscale else 1 # 1 is 3chan rbg, 0 is grayscale\n",
-    "\n",
-    "    batch_features = np.zeros((batch_size, 224, 224, 3))\n",
-    "\n",
-    "    batch_counter = 0\n",
-    "    while 1:\n",
-    "        for index, row in df.iterrows():\n",
-    "            img = cv2.imread(row['path'], imread_opt)\n",
-    "            batch_features[batch_counter] = cv2.resize(img, (224, 224), cv2.INTER_LINEAR)\n",
-    "            batch_counter += 1\n",
-    "            if batch_counter == batch_size:\n",
-    "                batch_counter = 0\n",
-    "                yield batch_features\n"
+    "features, _ = c.processing.df_to_training_tuples(test, (224,224,3), grayscale=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3506/3506 [==============================] - 55s    \n"
+     ]
+    }
+   ],
    "source": [
-    "batch_size_t = 10\n",
-    "predictions = model.predict_generator(df_to_keras_generator(test, batch_size_t, grayscale=False)\n",
-    "                    ,len(test))"
+    "predictions = model.predict(features, verbose=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.1337654 ,  0.539913  ,  0.32632154],\n",
+       "       [ 0.15445974,  0.59593856,  0.24960171],\n",
+       "       [ 0.18797268,  0.52045196,  0.29157543],\n",
+       "       ..., \n",
+       "       [ 0.12056883,  0.57936543,  0.30006573],\n",
+       "       [ 0.13937151,  0.64378583,  0.21684265],\n",
+       "       [ 0.17283009,  0.64826602,  0.17890391]], dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -246,22 +228,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path</th>\n",
+       "      <th>num_id</th>\n",
+       "      <th>processed_path</th>\n",
+       "      <th>Type_1</th>\n",
+       "      <th>Type_2</th>\n",
+       "      <th>Type_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>../data/test_stg2/12169.jpg</td>\n",
+       "      <td>12169</td>\n",
+       "      <td>../data/processed/resize_224/test_stg2/12169.jpg</td>\n",
+       "      <td>0.133765</td>\n",
+       "      <td>0.539913</td>\n",
+       "      <td>0.326322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>../data/test_stg2/10501.jpg</td>\n",
+       "      <td>10501</td>\n",
+       "      <td>../data/processed/resize_224/test_stg2/10501.jpg</td>\n",
+       "      <td>0.154460</td>\n",
+       "      <td>0.595939</td>\n",
+       "      <td>0.249602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>../data/test_stg2/12580.jpg</td>\n",
+       "      <td>12580</td>\n",
+       "      <td>../data/processed/resize_224/test_stg2/12580.jpg</td>\n",
+       "      <td>0.187973</td>\n",
+       "      <td>0.520452</td>\n",
+       "      <td>0.291575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>../data/test_stg2/12627.jpg</td>\n",
+       "      <td>12627</td>\n",
+       "      <td>../data/processed/resize_224/test_stg2/12627.jpg</td>\n",
+       "      <td>0.157127</td>\n",
+       "      <td>0.558215</td>\n",
+       "      <td>0.284658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>../data/test_stg2/10931.jpg</td>\n",
+       "      <td>10931</td>\n",
+       "      <td>../data/processed/resize_224/test_stg2/10931.jpg</td>\n",
+       "      <td>0.144653</td>\n",
+       "      <td>0.587621</td>\n",
+       "      <td>0.267726</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          path num_id  \\\n",
+       "0  ../data/test_stg2/12169.jpg  12169   \n",
+       "1  ../data/test_stg2/10501.jpg  10501   \n",
+       "2  ../data/test_stg2/12580.jpg  12580   \n",
+       "3  ../data/test_stg2/12627.jpg  12627   \n",
+       "4  ../data/test_stg2/10931.jpg  10931   \n",
+       "\n",
+       "                                     processed_path    Type_1    Type_2  \\\n",
+       "0  ../data/processed/resize_224/test_stg2/12169.jpg  0.133765  0.539913   \n",
+       "1  ../data/processed/resize_224/test_stg2/10501.jpg  0.154460  0.595939   \n",
+       "2  ../data/processed/resize_224/test_stg2/12580.jpg  0.187973  0.520452   \n",
+       "3  ../data/processed/resize_224/test_stg2/12627.jpg  0.157127  0.558215   \n",
+       "4  ../data/processed/resize_224/test_stg2/10931.jpg  0.144653  0.587621   \n",
+       "\n",
+       "     Type_3  \n",
+       "0  0.326322  \n",
+       "1  0.249602  \n",
+       "2  0.291575  \n",
+       "3  0.284658  \n",
+       "4  0.267726  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dev_submission.csv  \u001b[0m\u001b[01;34mprocessed\u001b[0m/                 \u001b[01;34mtest\u001b[0m/       \u001b[01;34mtrain\u001b[0m/\r\n",
+      "\u001b[01;34mmodel\u001b[0m/              solution_stg1_release.csv  \u001b[01;34mtest_stg2\u001b[0m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ../data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "c.submission.write_submission_file('output_vgg_4blocks_fullytrained.csv', test)"
+    "c.submission.write_submission_file('output_vgg_4blocks_fullytrained.csv', test, '../data/solution_stg1_release.csv')"
    ]
   },
   {
